--- a/src/Yeskn/MainBundle/Resources/views/about.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/about.html.twig
@@ -12,36 +12,41 @@
                     {% set locale = app.request.locale %}
                     {% if locale == 'en' %}
                         <p>
+                            The founding of Vmoex was inspired by a deep love for anime culture and a strong sense of connection with fellow enthusiasts.
+                            While anime culture has spread and developed widely across the vast landscape of the internet, we recognized the need for a dedicated community truly tailored for anime fans.
+                            Vmoex was created to fill this gap, offering a sanctuary where both seasoned otakus and newcomers alike can freely express themselves, engage in discussions, share their passions,
+                            and learn from one another. Through Vmoex, we aim to bring together like-minded individuals, fostering a space where everyone can explore and contribute to the growth of anime culture,
+                            and ultimately, find a sense of belonging and acceptance.
                         </p>
-
-                        <p></p>
-                        <p> </p>
-
-                        <p></p>
                     {% elseif locale == 'jp'  %}
                         <p>
+                            Vmoexの設立のきっかけは、二次元文化への愛と、同じ趣味を持つ人々との共感から生まれました。
+                            インターネットの広大な世界において、二次元文化は広く普及し発展してきましたが、私たちは、二次元愛好者のために特別に設計されたコミュニティがまだ不足していることに気付きました。
+                            Vmoexは、このギャップを埋めるために誕生しました。ここでは、経験豊富なオタクから新しいファンまで、誰もが自由に表現し、交流し、共有し、学ぶことができる楽園を提供します。
+                            Vmoexを通じて、志を同じくする仲間たちが集まり、共に二次元文化の探求と発展に貢献し、すべてのユーザーがここで安心感と共感を見つけられることを願っています。
+
                         </p>
-
-                        <p></p>
-                        <p> </p>
-
                         <p></p>
                     {% elseif locale == 'zh_TW' %}
                         <p>
+                            Vmoex建立的初衷源於對二次元文化的熱愛和對同好們的深切共鳴。
+                            在互聯網的廣袤世界中，雖然二次元文化得到了廣泛的傳播和發展，
+                            但我們意識到，仍然缺乏一個真正為二次元愛好者量身打造的專屬社區。
+                            Vmoex的誕生，正是為了填補這一空白，打造一個無論是資深宅還是新晉萌新，
+                            都能自由表達、交流、分享和學習的樂園。我們希望通過Vmoex，
+                            將志同道合的人們聚集在一起，共同探索和推動二次元文化的發展，
+                            讓每一位用戶在這裡找到歸屬感和認同感。
                         </p>
-
-                        <p></p>
-                        <p> </p>
-
-                        <p></p>
                     {% else %}
                         <p>
+                            Vmoex建立的初衷源于对二次元文化的热爱和对同好们的深切共鸣。
+                            在互联网的广袤世界中，虽然二次元文化得到了广泛的传播和发展，
+                            但我们意识到，仍然缺乏一个真正为二次元爱好者量身打造的专属社区。
+                            vmoex的诞生，正是为了填补这一空白，打造一个无论是资深宅还是新晋萌新，
+                            都能自由表达、交流、分享和学习的乐园。我们希望通过Vmoex，
+                            将志同道合的人们聚集在一起，共同探索和推动二次元文化的发展，
+                            让每一位用户在这里找到归属感和认同感。
                         </p>
-
-                        <p></p>
-                        <p> </p>
-
-                        <p></p>
                     {% endif %}
 
 
