--- a/src/Yeskn/MainBundle/Resources/views/sidebar-login.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/sidebar-login.html.twig
@@ -12,8 +12,10 @@
     <div class="panel-heading">
         使用条款
     </div>
-    <div class="panel-body hot-tags">
-        这里是使用条款的详细内容。
+    <div class="panel-body">
+        欢迎您注册成为Vmoex平台的用户！在注册之前，请仔细阅读
+        <a data-pjax href="{{'tos'}}" style="color: black;font-weight: bold;" >服务条款</a>
+        。这些事项旨在确保您在Vmoex的体验顺利且安全。
     </div>
 </div>
 
