--- a/src/Yeskn/MainBundle/Resources/views/default/index.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/default/index.html.twig
@@ -29,8 +29,8 @@
 
                 <div class="pull-right visible-lg panel-sort-btns">
                     <div class="btn-group btn-group-xs" role="group" aria-label="...">
-                        <a data-pjax href="{{ path(routeName, {tab: tab, sortBy: 'pub'}) }}" class="btn btn-default {% if sortBy == 'pub' %}current{% endif %}">最新发布</a>
-                        <a data-pjax href="{{ path(routeName, {tab: tab, sortBy: 'com'}) }}" class="btn btn-default {% if sortBy == 'com' %}current{% endif %}">最新评论</a>
+                        <a data-pjax href="{{ path(routeName, {tab: tab, sortBy: 'pub'}) }}" class="btn btn-default {% if sortBy == 'pub' %}current{% endif %}">{{ '最新发布'|trans }}</a>
+                        <a data-pjax href="{{ path(routeName, {tab: tab, sortBy: 'com'}) }}" class="btn btn-default {% if sortBy == 'com' %}current{% endif %}">{{ '最新评论'|trans }}</a>
                     </div>
                 </div>
             </div>
