--- a/src/Yeskn/MainBundle/Resources/views/sidebar/recommand-tabs.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/sidebar/recommand-tabs.html.twig
@@ -7,9 +7,8 @@
     <div class="panel-body">
         <ul style="list-style: none;float: left;padding: 0;margin: 0">
             {% for tab in tabs %}
-                <li style="display: inline-block;margin-right: 10px;margin-bottom: 10px">
-                    <a data-pjax href="{{ path('post_list', {tab: tab.alias}) }}">
-                        <img src="{{ asset(tab.avatar) }}" alt="" width="25" height="25" class="img-circle">
+                <li style="display: inline-block;margin-right: 10px;margin-bottom: 10px;border: 1px solid #e3e3e3;padding: 2px 6px;border-radius: 4px;">
+                    <a data-pjax href="{{ path('post_list', {tab: tab.alias}) }}" style="text-decoration: none;">
                         {{ tab.name }}
                     </a>
                 </li>
