--- a/app/Resources/views/emails/base.html.twig
+++ b/app/Resources/views/emails/base.html.twig
@@ -59,7 +59,7 @@
                                                 <td colspan="2" valign="middle" id="credit"
                                                     style="padding: 0 48px 48px 48px; -webkit-border-radius: 6px; border: 0; color: #83c3e9; font-family: Arial; font-size: 12px; line-height: 125%; text-align: center;">
                                                     <p><br>
-                                                        <a target="_blank" href="https://www.wpcraft.cn/"
+                                                        <a target="_blank" href=" {{ 'site_domain'|trans }}"
                                                            style="color: #309bda; font-weight: normal; text-decoration: underline;">
                                                             {{ 'site_name'|trans }}
                                                         </a></p>
