--- a/app/Resources/views/emails/new-message.html.twig
+++ b/app/Resources/views/emails/new-message.html.twig
@@ -1,7 +1,7 @@
 {% extends 'emails/base.html.twig' %}
 
 {% block email_title %}
-    Wpcraft 有人给您发送了私信
+    {{ 'site_name'|trans }} 有人给您发送了私信
 {% endblock %}
 
 {% block email_content %}
