--- a/src/Yeskn/MainBundle/Resources/views/chat/chat.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/chat/chat.html.twig
@@ -86,7 +86,7 @@
 {% block sidebar %}
 <div class="panel panel-default">
     <div class="panel-heading">
-       <i class="fa fa-question-circle"></i> 聊聊
+       <i class="fa fa-question-circle"></i> {{ 'blind.chat'|trans }}
     </div>
     <div class="panel-body">
         {{ 'blind_description'|trans }}
