--- a/src/Yeskn/MainBundle/Resources/views/user/setting.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/user/setting.html.twig
@@ -54,14 +54,17 @@
                                                 </div>
                                                 <div class="col-sm-8">
                                                     <input type="file" id="avatar" name="avatar" class="form-control">
-                                                    <p class="help-block">支持jpg、png、gif格式，gif格式需消耗50金币</p>
+                                                    <p class="help-block">支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币</p>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <div class="col-sm-offset-2 col-sm-10">
-                                                    <span class="help-block">昵称和头像180天内只能修改一次，<a class="text-underline" href="">
-                                                            <small class="text-muted">{{ 'why_this'|trans }}</small></a>
-                                                    </span>
+{#                                                    <span class="help-block">#}
+{#                                                         昵称180天内只能修改一次，#}
+{#                                                        <a class="text-underline" href="">#}
+{#                                                            <small class="text-muted">{{ 'why_this'|trans }}</small>#}
+{#                                                        </a>#}
+{#                                                    </span>#}
                                                     <button type="submit" class="btn btn-default btn-sm">{{ '保存'|trans }}</button>
                                                 </div>
                                             </div>
