--- a/app/Resources/views/emails/base.html.twig
+++ b/app/Resources/views/emails/base.html.twig
@@ -58,11 +58,7 @@
                                             <tr>
                                                 <td colspan="2" valign="middle" id="credit"
                                                     style="padding: 0 48px 48px 48px; -webkit-border-radius: 6px; border: 0; color: #83c3e9; font-family: Arial; font-size: 12px; line-height: 125%; text-align: center;">
-                                                    <p><br>
-                                                        <a target="_blank" href=" {{ 'site_domain'|trans }}"
-                                                           style="color: #309bda; font-weight: normal; text-decoration: underline;">
-                                                            {{ 'site_name'|trans }}
-                                                        </a></p>
+                                                    <p><br>{{ 'site_name'|trans }}</p>
                                                 </td>
                                             </tr>
                                         </table>
