--- a/src/Yeskn/MainBundle/Resources/views/contribute.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/contribute.html.twig
@@ -8,10 +8,19 @@
                      <div class="row">
                          <div class="col-sm-12">
                              <div style="text-align: center; padding: 20px">
-                                 <h3>谢谢你让我把Vmoex做的更好！</h3>
+                                 <h1>赞赏支持</h1>
                              </div>
+
                          </div>
                      </div>
+                     <div class="content">
+                         <div class="post-content">
+                             <p style="font-size: 16px;">作为开发者，我们的热情始终在于创造对他人有用的东西，Vmoex 项目也不例外。我们投入了大量的时间和精力，致力于为 Vmoex 用户提供更好的体验。</p>
+                             <p style="font-size: 16px;">如果 Vmoex 让你的生活变得更加愉快，请考虑给开发者一点小小的赞赏。这将有助于Vmoex的持续发展，并鼓励我们继续改进和创新！</p>
+                         </div>
+                     </div>
+
+
                      <div class="row">
                          <div class="col-sm-4 col-sm-offset-2">
                              <img width="100%" class="img-thumbnail" src="{{ asset('assets/images/zan/wechat.jpg') }}" alt="">
@@ -25,9 +34,29 @@
                      </div>
                      <div class="row">
                          <div class="col-sm-12">
-                             <h4>赞助记录</h4>
-
-                             <div class="alert alert-warning" role="alert">暂时没有任何赞助。</div>
+                             <h3>赞助记录</h3>
+{#                             <div style="padding: 6px;font-size: 16px;">迄今为止，我们已收到 0 笔赞赏，共计 0 元。对于你们的大方支持，我们感慨万分！</div>#}
+{#                             <table class="table">#}
+{#                                 <thead>#}
+{#                                 <tr>#}
+{#                                     <th scope="col">来自</th>#}
+{#                                     <th scope="col">金额（元）</th>#}
+{#                                     <th scope="col">留言</th>#}
+{#                                     <th scope="col">时间</th>#}
+{#                                     <th scope="col">方式</th>#}
+{#                                 </tr>#}
+{#                                 </thead>#}
+{#                                 <tbody>#}
+{#                                 <tr>#}
+{#                                     <th scope="row">demo</th>#}
+{#                                     <td>0</td>#}
+{#                                     <td>非常好用</td>#}
+{#                                     <td>2024/08/20</td>#}
+{#                                     <td>微信赞赏</td>#}
+{#                                 </tr>#}
+{#                                 </tbody>#}
+{#                             </table>#}
+                             <div class="alert alert-warning" role="alert">迄今为止，暂时没有任何赞助。</div>
                          </div>
                      </div>
                  </div>
