--- a/src/Yeskn/AdminBundle/Resources/views/sidebar.html.twig
+++ b/src/Yeskn/AdminBundle/Resources/views/sidebar.html.twig
@@ -3,7 +3,7 @@
         <ul class="nav" id="side-menu">
             <li><a href="{{ path('admin_index') }}"><i class="fa fa-dashboard fa-fw"></i> 控制台</a></li>
             <li>
-                <a href="#"><i class="fa fa-file-text fa-fw"></i> 帖子管理<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-file-text fa-fw"></i> 主题管理<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse">
                     <li><a href="{{ path('admin_list', {entity: 'post'}) }}"> 帖子列表</a></li>
                     <li><a href="{{ path('admin_list', {entity: 'tab'}) }}"> 板块列表</a></li>
