--- a/web/assets/css/common.css
+++ b/web/assets/css/common.css
@@ -1,3 +1,7 @@
+* {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+}
 body {
     cursor: url('/pointer.cur'), url('/pointer.cur'), auto;
     font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
