--- a/src/Yeskn/MainBundle/Resources/views/auth/login.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/auth/login.html.twig
@@ -38,6 +38,9 @@
                                     <input type="hidden" name="_target_path" value="/admin"/>
                                     <!-- Change this to a button or input when using this as a form -->
                                     <button type="submit" class="btn btn-lg btn-success btn-block">{{ 'login'|trans }}</button>
+                                    <div class="form-group">
+                                    <a href="{{ path('register') }}" class="checkbox">立即注册</a>
+                                    </div>
                                 </fieldset>
                             </form>
                         </div>
