--- a/src/Yeskn/MainBundle/Resources/views/landlord.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/landlord.html.twig
@@ -20,10 +20,10 @@
         <input name="live_statu_val" id="live_statu_val" value="0" type="hidden" />
         <audio src="" style="display:none;" id="live2d_bgm" data-bgm="0" preload="none"></audio>
 
-        <input name="live2dBGM" value="https://t1.aixinxi.net/o_1c56a1k361lh93t14ha1cmi238a.mp3" type="hidden">
-        <input name="live2dBGM" value="https://t1.aixinxi.net/o_1c56a3tc42tka7q52q1jksik3a.mp3" type="hidden">
-        <input name="live2dBGM" value="https://t1.aixinxi.net/o_1c56a30tn12gp1ptp6o10hm10gsa.mp3" type="hidden">
-        <input name="live2dBGM" value="https://t1.aixinxi.net/o_1c56a58rn1m0e89q1kht1l1hctja.mp3" type="hidden">
+        <input name="live2dBGM" value="https://m701.music.126.net/20240821142339/9e421e274bdb3b4b0dea49ef38e97765/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/28481697235/89c4/7cc1/9528/58ad0a193df388d7bd1648b00d1c9c56.mp3" type="hidden">
+        <input name="live2dBGM" value="https://m701.music.126.net/20240821142426/3467e079efc74c617eda10e84cb95a43/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/31537016310/e902/9eff/d154/f5f3def7807db5948daa34ae530d7110.mp3" type="hidden">
+        <input name="live2dBGM" value="https://music.163.com/song/media/outer/url?id=1956202531.mp3" type="hidden">
+        <input name="live2dBGM" value="https://music.163.com/song/media/outer/url?id=1330348068.mp3" type="hidden">
 
         <input id="duType" value="douqilai,l2d_caihong" type="hidden">
     </div>
