--- a/src/Yeskn/MainBundle/Resources/views/auth/register.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/auth/register.html.twig
@@ -12,10 +12,19 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
                             {% include 'flash_messages.html.twig' %}
-
                             {{ form_start(form) }}
-                            {{ form_widget(form) }}
+                            {{ form_row(form.username) }}
+                            {{ form_row(form.email) }}
+                            {{ form_row(form.password) }}
+                            <div class="form-group">
+                                {{ form_widget(form.submit, {'attr': {'class': 'btn-default btn'}}) }}
+                            </div>
+                            <div>
+                                <span>已有帐号？</span>
+                                <span><a href="{{ path('login') }}">直接登录</a></span>
+                            </div>
                             {{ form_end(form) }}
+
                         </div>
                     </div>
                 </div>
