--- a/src/Yeskn/MainBundle/Resources/views/default/index.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/default/index.html.twig
@@ -31,6 +31,15 @@
                     </div>
                 </div>
             </div>
+        {% if tabChild is not empty %}
+            <div class="tab-list" style="margin: 0;padding:10px;background-color: #f1f5f9;border-radius: 3px 3px 0 0;">
+                {% for tabItem in tabChild %}
+                    <a data-pjax href="{{ path('post_list', {tab: tabItem.alias}) }}">
+                        {{ tabItem.name|trans }}
+                    </a>
+                {% endfor %}
+            </div>
+        {% endif %}
         {% endif %}
         {% if posts is not empty %}
             {% for post in posts %}
