--- a/web/assets/css/common.css
+++ b/web/assets/css/common.css
@@ -1,6 +1,6 @@
 * {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-tap-highlight-color: transparent;
+    box-shadow: none !important;
+    text-shadow: none !important;
 }
 body {
     cursor: url('/pointer.cur'), url('/pointer.cur'), auto;
@@ -157,7 +157,6 @@ article.main{
 }
 .home-content-main .tab-header {
     width: 100%;
-    min-height: 92px;
     background: #f5f5f5;
 }
 .home-content-main .well.no-post {
@@ -794,7 +793,7 @@ ul.pagination {
 
 .tab-list {
     padding: 10px;
-    background-color: #f6f6f6;
+    background-color: #ffffff;
     border-radius: 3px 3px 0 0;
 }
 .tab-list a {
