--- a/src/Yeskn/AdminBundle/Resources/views/sidebar.html.twig
+++ b/src/Yeskn/AdminBundle/Resources/views/sidebar.html.twig
@@ -1,31 +1,31 @@
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
-            <li><a href="{{ path('admin_index') }}"><i class="fa fa-dashboard fa-fw"></i> 控制台</a></li>
             <li>
-                <a href="#"><i class="fa fa-file-text fa-fw"></i> 主题管理<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="{{ path('admin_list', {entity: 'post'}) }}"> 帖子列表</a></li>
-                    <li><a href="{{ path('admin_list', {entity: 'tab'}) }}"> 板块列表</a></li>
-                </ul>
+                <a href="{{ path('admin_index') }}"><i class="fa fa-dashboard fa-fw"></i> 控制台</a>
             </li>
             <li>
-                <a href="{{ path('admin_list', {entity: 'footerLink'}) }}"><i class="fa fa-link fa-fw"></i> 底部链接</a>
+                <a href="{{ path('admin_list', {entity: 'tab'}) }}"><i class="fa fa-file fa-fw"></i> 板块管理</a>
             </li>
             <li>
-                <a href="{{ path('admin_list', {entity: 'advertisement'}) }}"><i class="fa fa-suitcase fa-fw"></i> 广告管理</a>
+                <a href="{{ path('admin_list', {entity: 'post'}) }}"><i class="fa fa-file-text fa-fw"></i> 帖子管理</a>
             </li>
             <li>
-                <a href="{{ path('admin_list', {entity: 'translation'}) }}"><i class="fa fa-language fa-fw"></i> 翻译管理</a>
+                <a href="{{ path('admin_list', {entity: 'user'}) }}"><i class="fa fa-user fa-fw"></i> 用户管理</a>
+            <li>
+                <a href="{{ path('admin_list', {entity: 'comment'}) }}"><i class="fa fa-comment fa-fw"></i> 评论管理</a>
             </li>
             <li>
                 <a href="{{ path('admin_list', {entity: 'announce'}) }}"><i class="fa fa-bullhorn fa-fw"></i> 公告管理</a>
             </li>
             <li>
-                <a href="{{ path('admin_list', {entity: 'user'}) }}"><i class="fa fa-user fa-fw"></i> 用户管理</a>
+                <a href="{{ path('admin_list', {entity: 'translation'}) }}"><i class="fa fa-language fa-fw"></i> 翻译管理</a>
             </li>
             <li>
-                <a href="{{ path('admin_list', {entity: 'comment'}) }}"><i class="fa fa-comment fa-fw"></i> 评论管理</a>
+                <a href="{{ path('admin_list', {entity: 'advertisement'}) }}"><i class="fa fa-suitcase fa-fw"></i> 广告管理</a>
+            </li>
+            <li>
+                <a href="{{ path('admin_list', {entity: 'footerLink'}) }}"><i class="fa fa-link fa-fw"></i> 底部链接</a>
             </li>
             <li>
                 <a href="{{ path('admin_list', {entity: 'page'}) }}"><i class="fa fa-file-text fa-fw"></i> 页面管理</a>
