--- a/src/Yeskn/MainBundle/Resources/views/auth/login.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/auth/login.html.twig
@@ -39,7 +39,7 @@
                                     <!-- Change this to a button or input when using this as a form -->
                                     <button type="submit" class="btn btn-lg btn-success btn-block">{{ 'login'|trans }}</button>
                                     <div class="form-group">
-                                    <a href="{{ path('register') }}" class="checkbox">立即注册</a>
+                                    <a data-pjax href="{{ path('register') }}" class="checkbox">立即注册</a>
                                     </div>
                                 </fieldset>
                             </form>
