--- a/src/Yeskn/MainBundle/Resources/views/auth/register.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/auth/register.html.twig
@@ -21,7 +21,7 @@
                             </div>
                             <div>
                                 <span>已有帐号？</span>
-                                <span><a href="{{ path('login') }}">直接登录</a></span>
+                                <span><a data-pjax href="{{ path('login') }}">直接登录</a></span>
                             </div>
                             {{ form_end(form) }}
 
