--- a/src/Yeskn/MainBundle/Resources/views/post/index.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/post/index.html.twig
@@ -20,18 +20,14 @@
                </div>
             </div>
         {% else %}
-
             <div class="tab-list">
                 <a data-pjax class="{{ tab == 'all' ? 'current-tab':'' }}" href="{{ path('post_list', {tab: 'all'}) }}">{{ 'all'|trans }}</a>
                 <a data-pjax class="{{ tab == 'hot' ? 'current-tab':'' }}"  href="{{ path('post_list', {tab: 'hot'}) }}">{{ 'hot'|trans }}</a>
-
                 {% for tabItem in tabs %}
-                    <a data-pjax class="{{ tab == tabItem.alias ? 'current-tab':'' }}"  href="{{ path('post_list', {tab: tabItem.alias}) }}">{{ tabItem.name|trans }}</a>
+                    <a data-pjax class="{{ tab == tabItem.alias ? 'current-tab':'' }}"  href="{{ path('post_list', {tab: tabItem.alias}) }}">{{ tabItem.name|trans|trim }}</a>
                 {% endfor %}
-
-
+                <a data-pjax href="{{ path('tabs_index') }}">{{ '更多'|trans }}&raquo;</a>
                 {% set routeName = app.request.attributes.get('_forwarded').get('_route') %}
-
                 <div class="pull-right visible-lg panel-sort-btns">
                     <div class="btn-group btn-group-xs" role="group" aria-label="...">
                         <a data-pjax href="{{ path(routeName, {tab: tab, sortBy: 'pub'}) }}" class="btn btn-default {% if sortBy == 'pub' %}current{% endif %}">{{ '最新发布'|trans }}</a>
