--- a/src/Yeskn/MainBundle/Resources/views/auth/register.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/auth/register.html.twig
@@ -20,8 +20,8 @@
                                 {{ form_widget(form.submit, {'attr': {'class': 'btn-default btn'}}) }}
                             </div>
                             <div>
-                                <span>已有帐号？</span>
-                                <span><a data-pjax href="{{ path('login') }}">直接登录</a></span>
+                                <span>{{ '已有帐号？'|trans  }}</span>
+                                <span><a data-pjax href="{{ path('login') }}">{{ '直接登录'|trans  }}</a></span>
                             </div>
                             {{ form_end(form) }}
 
