--- a/src/Yeskn/MainBundle/Resources/views/footer.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/footer.html.twig
@@ -34,9 +34,9 @@
         <div class="row">
             <div class="col-sm-12">
                 <div>
-                    {{ 'member_oneline_count'|trans }}{{ siteState.onlineUserCount }}人，
+                    {{ 'member_oneline_count'|trans }}{{ siteState.onlineUserCount }}{{ 'person'|trans }}，
                     {{ 'visitor'|trans }}<span id="onlineCnt">1</span>{{ 'person'|trans }}，
-                    {{ 'footer_oneline_user_most'|trans }}{{ siteState.maxOnlineNum }}人
+                    {{ 'footer_oneline_user_most'|trans }}{{ siteState.maxOnlineNum }}{{ 'person'|trans }}
                 </div>
                 <div class="copy">{{ 'site_copyright'|trans|raw }}</div>
             </div>
