--- a/src/Yeskn/MainBundle/Resources/views/user/sidebar.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/user/sidebar.html.twig
@@ -33,10 +33,10 @@
             </ul>
 
             <div class="list-group vertical-menu notification-nav">
-                <a data-pjax class="list-group-item {{ scope == 'home' ? 'active':'' }}" href="{{ path('user_home') }}">个人中心</a>
-                <a data-pjax class="list-group-item {{ scope == 'notice' ? 'active':'' }}" href="{{ path('user_notice') }}">我的通知  <span class="badge">{{ notice_count }}</span></a>
-                <a data-pjax class="list-group-item {{ scope == 'message' ? 'active':'' }}" href="{{ path('user_message') }}">我的信箱  <span class="badge">{{ message_count }}</span></a>
-                <a data-pjax class="list-group-item {{ scope == 'setting' ? 'active':'' }}" href="{{ path('user_setting') }}">个人设置</a>
+                <a data-pjax class="list-group-item {{ scope == 'home' ? 'active':'' }}" href="{{ path('user_home') }}">{{ 'nav_user_home'|trans }}</a>
+                <a data-pjax class="list-group-item {{ scope == 'notice' ? 'active':'' }}" href="{{ path('user_notice') }}">{{ 'notice_my_notice'|trans }} <span class="badge">{{ notice_count }}</span></a>
+                <a data-pjax class="list-group-item {{ scope == 'message' ? 'active':'' }}" href="{{ path('user_message') }}">{{ '我的信箱'|trans }} <span class="badge">{{ message_count }}</span></a>
+                <a data-pjax class="list-group-item {{ scope == 'setting' ? 'active':'' }}" href="{{ path('user_setting') }}">{{ 'nav_user_setting'|trans }}</a>
             </div>
         </div>
     </div>
