--- a/src/Yeskn/MainBundle/Resources/views/default/index.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/default/index.html.twig
@@ -125,7 +125,7 @@
         {% else %}
             <div class="row">
                 <div class="col-md-12">
-                    <div class="well" style="margin: 15px">{{ '暂时没有任何文档！' }}</div>
+                    <div class="well" style="margin: 15px">{{ '暂时没有任何文档！'|trans }}</div>
                 </div>
             </div>
         {% endif %}
