--- a/src/Yeskn/MainBundle/Resources/views/sidebar/my-status.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/sidebar/my-status.html.twig
@@ -16,7 +16,7 @@
                 {% if app.user|signed %}
                     <a data-pjax href="{{ path('users_rank_checkin') }}" type="button" class="btn btn-default btn-sm" style="color: yellowgreen"><i class="fa fa-flag"></i> {{ 'continuous_signed count day'|trans({count:app.user.signDay}) }} ！</a>
                 {% else %}
-                    <button type="button" id="sign-remark" class="btn btn-warning btn-sm"><i class="fa fa-gift"></i> 签到领取奖励</button>
+                    <button type="button" id="sign-remark" class="btn btn-warning btn-sm"><i class="fa fa-gift"></i>{{ '签到领取奖励'|trans }}</button>
                 {% endif %}
                 <a data-pjax href="{{ path('users_rank') }}" class="btn btn-default btn-sm pull-right">
                     <span class="gold-amount">{{ app.user.gold }}</span>
