更新 setting.html.twig

--- a/src/Yeskn/MainBundle/Resources/views/user/setting.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/user/setting.html.twig
@@ -37,8 +37,12 @@
                                                            name="nickname"
                                                            {{ canEditNicknameDays ? 'disabled' : '' }}>
                                                     <span id="helpBlock" class="help-block">
-                                                        {{ canEditNicknameDays ? (canEditNicknameDays ~ {{ '天后可修改昵称。'|trans }}) : {{ '昵称每180天可修改一次，请谨慎修改。'|trans }}}}
-                                                    </span>
+       {% if canEditNicknameDays is defined %}
+    {{ canEditNicknameDays }} ~ {{ '天后可修改昵称。'|trans }}
+{% else %}
+    {{ '昵称每180天可修改一次，请谨慎修改。'|trans }}
+{% endif %}
+                                                                    </span>
                                                 </div>
                                             </div>
                                             <div class="form-group">
