--- a/src/Yeskn/MainBundle/Resources/views/post/index.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/post/index.html.twig
@@ -8,7 +8,7 @@
                    <div class="col-md-12">
                        <div class="tab-info">
                            <b>
-                               <a href="{{ path('homepage') }}">{{ 'site_name'|trans }}</a>
+                               <a data-pjax href="{{ path('homepage') }}">{{ 'site_name'|trans }}</a>
                                <i class="fa  fa-angle-right"></i> <a data-pjax href="{{ path('post_list', {tab:currentTab.parent.alias}) }}">{{ currentTab.parent.name }}</a>
                                <i class="fa fa-angle-right"></i> {{ currentTab.name }}
                            </b>
