--- a/src/Yeskn/MainBundle/Resources/views/footer.html.twig
+++ b/src/Yeskn/MainBundle/Resources/views/footer.html.twig
@@ -34,9 +34,9 @@
         <div class="row">
             <div class="col-sm-12">
                 <div>
-                    {{ 'member_oneline_count'|trans }}<span id="memberOnlineCnt">0</span>{{ 'person'|trans }}，
-                    {{ 'visitor'|trans }}<span id="guestCnt">1</span>{{ 'person'|trans }}，
-                    {{ 'footer_oneline_user_most'|trans }}<span id="maxOnlineCnt">0</span>{{ 'person'|trans }}
+                    {{ 'member_oneline_count'|trans }}{{ siteState.onlineUserCount }}{{ 'person'|trans }}，
+                    {{ 'visitor'|trans }}<span id="onlineCnt">0</span>{{ 'person'|trans }}，
+                    {{ 'footer_oneline_user_most'|trans }}  <span id="maxOnlineCnt">0</span> {{ 'person'|trans }}
                 </div>
                 <div class="copy">{{ 'site_copyright'|trans|raw }}</div>
             </div>
